--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>UX Checklist</title>
+	<title>Website Creation Checklist</title>
 	<link rel="shortcut icon" href="favicon.ico?v=1">
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
